# LLM-Fuzz

./: README.md  edit_source.sh  initial.sh  run.sh
assets/: NormalAttacker.sol  NormalAttacker.sol.json  ReentrancyAttacker.sol  ReentrancyAttacker.sol.json
contracts/: GuessEth.sol  GuessEth.sol.json
coverage/: DEJToken_coverage.json
sFuzz/: CMakeLists.txt
sFuzz/fuzzer/: Utils.h  main.cpp
sFuzz/libethereum/: Transaction.h
sFuzz/libfuzzer/: BytecodeBranch.cpp  CMakeLists.txt  ContractABI.cpp  ContractABI.h  Dictionary.cpp  Dictionary.h  FuzzItem.h  Fuzzer.cpp  Fuzzer.h  LLMhelper.cpp  LLMhelper.h  Logger.cpp  Logger.h  Mutation.cpp  Mutation.h  TargetContainer.h  TargetContainerResult.cpp  TargetContainerResult.h  TargetExecutive.cpp  TargetExecutive.h  TargetProgram.cpp  Util.cpp  Util.h
sFuzz/liboracle/: Common.h  OracleFactory.cpp  OracleFactory.h
source/: example.sol
tools/: contracts_edit  contracts_edit.cpp  rename.py
